--- a/Webpage_lykke/assets/css/main.css
+++ b/Webpage_lykke/assets/css/main.css
@@ -2505,8 +2505,8 @@ input, select, textarea {
 	}
 	.Lcont_1_1 h1{
 		font-size: 4rem;
+		margin-top: 4rem;
 		font-family: "Raleway";
-		margin: 0;
 	}
 	.Lcontaine_2{
 		display: flex;
